# internal/premises_wl/model_building.go
@@ -1,0 +1,25 @@
+/*
+ * Room List API
+ *
+ * Hospital Room List management for Web-In-Cloud system
+ *
+ * API version: 1.0.0
+ * Contact: pfx@google.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package premises_wl
+
+type Building struct {
+
+	// Unique identifier of the building
+	Id string `json:"id"`
+
+	// Human-readable name of the building
+	Name string `json:"name"`
+
+	// Physical address of the building
+	Address string `json:"address"`
+
+	Rooms []RoomEntry `json:"rooms,omitempty"`
+}
